welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:3: error: not found: value bis
while ((bis==0)||(ora==0)||(2*bis>ora)){
        ^RunHalf:5: error: not found: value ora
		ora=ora+1;
                ^RunHalf:8: error: not found: value bis
		bis=bis+1;
                ^