welcome.lessons.welcome.variables.RunHalf.scala.code
override def run{
while ((bis==0)||(ora==0)||(2*bis>ora)){
	if (estSurOrange()){
		ora=ora+1;
	}
	if (estSurBiscuit()){
		bis=bis+1;
	}
	avance();
}
}